# ktlint-rs

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md  RULE_PLAN.md  TASK_PLAN.md  findings.md  progress.md  rustfmt.toml  task_plan.md
.agents/skills/: ktlint-rs
.agents/skills/bench/: SKILL.md
.agents/skills/ktlint-rs/: SKILL.md
.agents/skills/ktlint-rs-pr/: SKILL.md
.agents/skills/rust-coding/: SKILL.md
.github/workflows/: bench.yml  ci.yml  release.yml  self-test.yml
.ktlint-rs/: cache.json
contrib/kotlinc-plugin/: README.md  TypeExtractor.kt
docs/: DESIGN.md  PERFORMANCE.md  RULE_PLAN.md  command.md  task_plan.md
examples/: dump_cst.rs
scripts/: bench.sh  get-ktlint.sh  install.ps1  install.sh  parity.sh  setup-fixtures.sh  tsv-to-md.sh
skills/: README.md  ktlint-rs.md
skills/ktlint-rs/: SKILL.md
src/: baseline.rs  cache.rs  format_tests.rs  git_hook.rs  ktlint_conformance.rs  ktlint_parity_tests.rs  main.rs  yaml_config.rs
src/cli/: mod.rs
src/config/: mod.rs
src/discovery/: mod.rs
src/formatter/: mod.rs
src/parser/: cst.rs  mod.rs  node_types_test.rs
src/reporter/: mod.rs
src/resolver/: builder.rs  mod.rs  type_bridge.rs  type_ffi.rs
src/rules/: builtins.rs  compat.rs  final_rules.rs  mod.rs  new_rules.rs  new_rules2.rs  new_rules3.rs  new_rules4.rs  phase1_more.rs  phase1_rules.rs  phase3_rules.rs  phase3b_rules.rs  registry.rs  suppress.rs
src/rules/detekt/: mod.rs  (+8 more)
tests/fixtures/: fixtures.conf  setup.sh
tests/integration/: fixtures_tests.rs  main.rs  tests.rs
tools/: compare.py
(+119 files in other folders)
