[package]
name = "ktlint-rs"
version = "0.1.0"
edition = "2021"
description = "A fast Kotlin linter and formatter written in Rust"
license = "MIT"
repository = "https://github.com/qdsfdhvh/ktlint-rs"

[[bin]]
name = "ktlint"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
ignore = "0.4"
editorconfig = "1"

# tree-sitter from git for latest fixes, kotlin-sg from crates.io for compat
tree-sitter = "0.24"
tree-sitter-kotlin-sg = "0.4"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
